# mewing

./: CMakeLists.txt  README.md  SuperSimone.txt  client.cpp  function progetto  function progetto.sql  install.sh  log.txt  password.txt  prova.sql  relazione 1.0.docx  server.cpp  table progetto  trigger progetto  uiii.txt
database/: create.sh  fill.sql  function.sql  parametri.sql  permission.sql  permission_log.sql  setup.sql  setup_log.sql  table progetto.sql  table.sql  table_log.sql  trigger progetto.sql  trigger.sql  trigger_log.sql  trigget_log.sql
entities/: Corriere.h  Customer.cpp  Customer.h  Indirizzo.h  Metodo.h  Ordine.h  Prodotto.h  fornitore.h  struct_customer.cpp  struct_customer.h
entities/Buono/: buono.cpp  buono.h
entities/Carrello/: carrello.cpp  carrello.h
entities/Corriere/: corriere.cpp  corriere.h
entities/Customer/: Customer.cpp  Customer.h  Makefile  customer.cpp  customer.h  my_program
entities/Customer/src/: Customer.cpp  Customer.h  Makefile
entities/Fornitore/: fornitore.cpp
entities/Ordine/: ordine.cpp  ordine.h
entities/Prodotto/: prodotto.cpp  prodotto.h
entities/Server/: Makefile  Server.cpp  Server.h
entities/Server/src/: Makefile  my_program  server.cpp  server.h
entities/Trasportatore/: trasportatore.cpp
lib/: funzioniAusiliarie.cpp  funzioniAusiliarie.h
lib/con2redis/src/: Makefile
servers/Customer/metodi/: Makefile  aggiungiCarrello.cpp  aggiungiCarrello.h  aggiungiIndirizzo.cpp  aggiungiIndirizzo.h  (+30 more)
src/: main.cpp
test/: couriertests.py  creacustomer.py  customertests.py  suppliertests.py
(+88 files in other folders)
